@@ -33,7 +33,7 @@ dist_project_lib_DATA += startup/linkcmds
 
 startup_SOURCES = ../../shared/bspclean.c ../../shared/bsplibc.c \
     ../../shared/bsppredriverhook.c ../../shared/bspgetworkarea.c \
-    ../../shared/bsppost.c startup/bspstart.c \
+    ../../shared/bsppost.c startup/bsppretaksinghook.c ../../shared/bspstart.c \
     ../../shared/bootcard.c ../../shared/sbrk.c ../../shared/setvec.c \
     ../../c4x/shared/c3xspurious.c ../../c4x/shared/c4xspurious.c \
     ../../c4x/shared/bspspuriousinit.c startup/spurious.c \
@@ -41,11 +41,12 @@ startup_SOURCES = ../../shared/bspclean.c ../../shared/bsplibc.c \
 clock_SOURCES = clock/clock.c
 console_SOURCES = console/consolereserveresources.c console/debugio.c \
     console/simio.c ../../shared/console.c
+debugio_SOURCES = console/debugio.c
 timer_SOURCES = timer/timer.c
 
 noinst_LIBRARIES = libbsp.a
 libbsp_a_SOURCES = $(startup_SOURCES) $(clock_SOURCES) $(console_SOURCES) \
-    $(timer_SOURCES)
+    $(debugio_SOURCES) $(timer_SOURCES)
 
 EXTRA_DIST += times
 
